# data-test-suggestion-agent

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
config/examples/: customer_candidate_tests.json  customer_candidate_tests_with_rejections.json  customer_dataset_context.yaml
docs/: architecture.md  artifacts.md  demo_workflow.md  design_boundaries.md  design_principles.md  example_commands.md  portfolio_summary.md  roadmap.md
sample_data/customers/: customers_for_test_suggestions.csv
src/data_test_suggestion_agent/: __init__.py  candidate_loader.py  candidate_models.py  candidate_validator.py  cli.py  context_loader.py  evidence_payload.py  intake.py  llm_candidate_generator.py  llm_prompt_builder.py  llm_schema.py  models.py  output_writers.py  profiling.py  report_generator.py  test_executor.py
tests/: test_candidate_loader.py  test_candidate_validator.py  test_cli.py  test_context_loader.py  test_evidence_payload.py  test_intake.py  test_llm_candidate_generator.py  test_llm_prompt_builder.py  test_profiling.py  test_report_generator.py  test_test_executor.py
